syntax = "proto3";

package slash.store;

import "store/common.proto";

option go_package = "github.com/warthurton/slash/proto/gen/store";

message Collection {
  int32 id = 1;

  int32 creator_id = 2;

  int64 created_ts = 3;

  int64 updated_ts = 4;

  string name = 6;

  string title = 7;

  string description = 8;

  repeated int32 shortcut_ids = 9;

  Visibility visibility = 10;
}
